--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,13 @@
 .App {
   text-align: center;
+  display: flex;
+  flex-direction: row;
+  background: black;
+  background-image: url("./images/space.jpg");
+  width:auto;
+  height:1500px;
+  flex-wrap: wrap;
+
 }
 
 .App-logo {
@@ -35,4 +43,79 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+
+.personaje {
+  margin-left: 5px;
+  margin-top: 20px;
+  border: 5px solid rgb(247, 180, 56);
+  background: black;
+  color:white;
+  width: 600px;
+  height: auto;
+  border-radius: 10px;
+  display:flex;
+
+}
+
+
+
+.img{
+  width:300px;
+  text-align: center;
+}
+.img>div{
+  margin-top: 10px;
+}
+
+.char{
+  width: 600px
+}
+.char> div{
+  border: 0.5px solid rgb(247, 180, 56);
+  border-radius: 5px;
+}
+.inputButon{
+  margin-left: 5px;
+  margin-right: 5px;
+  border-radius: 10px;
+  border: 5px solid red;
+  background: black;
+  padding: 10px;
+  width: 580px;
+
+}
+
+
+.charSelect{
+  display: flex;
+  flex-wrap: wrap;
+  border: 5px solid red;
+  margin-top: 75px;
+  margin-left: 5px;
+  width: 800px;
+  height:auto;
+  color:white;
+  border-radius: 10px;
+
+}
+
+.selected{
+  display: flex;
+  flex-direction: column;
+}
+
+.selected > div{
+  height: 30px;
+  border: 0.5px solid red;
+  margin:30px;
+  margin-left: 50px;
+  text-align: center;
+  width:700px
+
+}
+
+.borde{
+  margin-top: 50px;
 }
